--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
@@ -49,11 +50,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/react": "^14.2.2",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
-    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
+    "prettier": "^3.2.5"
   }
 }
