--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.0.23",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
