--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18.2.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "0.2.1",
     "date-fns": "^3.6.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.0.23",
