--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-input-mask": "^2.0.4",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
@@ -83,6 +84,7 @@
     "@craco/craco": "^7.1.0",
     "@testing-library/react": "^14.2.2",
     "@types/react-input-mask": "^3.0.5",
+    "@types/react-mentions": "^4.1.13",
     "@types/uuid": "^9.0.8",
     "craco-alias": "^3.0.1",
     "eslint": "^8.57.0",
